superadministrador no editable

--- a/oficialia/src/app/pages/user/user.component.html
+++ b/oficialia/src/app/pages/user/user.component.html
@@ -38,7 +38,7 @@
         <!-- Columna de ID (oculta) -->
         <ng-container matColumnDef="id">
           <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-          <mat-cell *matCellDef="let user" hidden> {{ user.id }} </mat-cell>
+          <mat-cell *matCellDef="let user" > {{ user.id }} </mat-cell>
         </ng-container>
 
         <!-- Columna de Email -->
