--- a/oficialia/src/app/pages/user/user.component.html
+++ b/oficialia/src/app/pages/user/user.component.html
@@ -9,7 +9,7 @@
       <a mat-list-item routerLink="/oficio">Oficio</a>
       <a mat-list-item routerLink="/circular">Circulares</a>
       <a mat-list-item routerLink="/agenda">Agenda</a>
-      <a mat-list-item routerLink="/report">Reportes</a>
+      <!-- <a mat-list-item routerLink="/report">Reportes</a> -->
       <a mat-list-item routerLink="/user">Permisos y Roles</a>
     </mat-nav-list>
   </mat-sidenav>
