--- a/oficialia/src/app/pages/acuse/acuse.component.css
+++ b/oficialia/src/app/pages/acuse/acuse.component.css
@@ -131,4 +131,40 @@
   footer p {
     margin: 0;
   }
+  .table-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+  
+  .filter-field {
+    width: 300px;
+  }
+  
+  .table-container {
+    margin-top: 15px;
+  }
+  
+  .full-width-table {
+    width: 100%;
+  }
+  
+  .form-container {
+    margin-top: 20px;
+  }
+  
+  .form-row {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+  }
+  
+  .form-row mat-form-field {
+    width: 100%;
+  }
+  
+  .button-container {
+    margin-top: 20px;
+    text-align: center;
+  }
   
