--- a/oficialia/src/app/pages/agenda/agenda.component.html
+++ b/oficialia/src/app/pages/agenda/agenda.component.html
@@ -9,7 +9,7 @@
     <mat-nav-list class="centered-list">
       <a mat-list-item routerLink="/main">Inicio</a>
       <a mat-list-item routerLink="/oficio">Oficio</a>
-      <a mat-list-item routerLink="/circular">Circulares</a>
+      <!-- <a mat-list-item routerLink="/circular">Circulares</a> -->
       <a mat-list-item routerLink="/agenda">Agenda</a>
       <!-- <a mat-list-item routerLink="/report">Reportes</a> -->
       <a mat-list-item routerLink="/user">Permisos y Roles</a>
@@ -86,7 +86,6 @@
                       <mat-icon>delete</mat-icon>
                     </button>
                   </div>
-                 
                 </div>
               </mat-list>
             </ng-container>
