--- a/oficialia/src/app/pages/main/main.component.html
+++ b/oficialia/src/app/pages/main/main.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list class="centered-list">
       <a mat-list-item routerLink="/main">Inicio</a>
       <a mat-list-item routerLink="/oficio">Oficio</a>
-      <a mat-list-item routerLink="/circular">Circulares</a>
+      <!-- <a mat-list-item routerLink="/circular">Circulares</a> -->
       <a mat-list-item routerLink="/agenda">Agenda</a>
       <!-- <a mat-list-item routerLink="/report">Reportes</a> -->
       <a mat-list-item routerLink="/user">Permisos y Roles</a>
