--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -11,7 +11,7 @@
     <mat-nav-list class="centered-list">
       <a mat-list-item routerLink="/main">Inicio</a>
       <a mat-list-item routerLink="/oficio">Oficio</a>
-      <a mat-list-item routerLink="/circular">Circulares</a>
+      <!-- <a mat-list-item routerLink="/circular">Circulares</a> -->
       <a mat-list-item routerLink="/agenda">Agenda</a>
       <!-- <a mat-list-item routerLink="/report">Reportes</a> -->
       <a mat-list-item routerLink="/user">Permisos y Roles</a>
@@ -71,7 +71,7 @@
           </ng-container>
 
           <ng-container matColumnDef="dependencia_des">
-            <th mat-header-cell *matHeaderCellDef> Dependencia Destino </th>
+            <th mat-header-cell *matHeaderCellDef> Area Destino </th>
             <td mat-cell *matCellDef="let oficio"> {{ oficio.dependencia_des }} </td>
           </ng-container>
 
